test/error/RealConst1.mod
MODULE RealConst1;

 CONST R = 1.E308; Overflow* = R * 10.;

 PROCEDURE Go*; END Go;

END RealConst1.
